--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,6 @@ html {
 
 .page {
   inline-size: 1200px;
-  height: 534px;
   block-size: 100%;
   margin: auto;
   color: #fff;
@@ -78,9 +77,7 @@ ol {
   flex-direction: column;
   justify-content: flex-end;
   width: 399px;
-  height: 534px;
   gap: 26px;
-  
 }
 
 .content {
@@ -93,20 +90,20 @@ ol {
 
 .content__list-container {
   height: 298px;
-  overflow-y: scroll;
+  overflow-y: auto;
   position: relative;
 }
 
 .title {
   width: 259px;
-  height: 210px;
-  padding-top: 3px;
-  padding-left: 3px;
   text-transform: uppercase;
-  font-family: Oswald;
+  font-family: 'Oswald', sans-serif;
   font-size: 75px;
-  font-weight: normal;
+  font-weight: 700;
   line-height: 94%;
+  position: relative;
+  top: 3px;
+  left: 1px;
 }
 
 .content__accent {
@@ -115,8 +112,9 @@ ol {
 }
 
 .result__video-container {
-  width: 711px;
+  display: inline-block;
   height: 386px;
+  position: relative;
 }
 
 .result__video {
@@ -149,9 +147,8 @@ ol {
 .content__card-link {
   text-decoration: none;
   color: #fff;
-
-
 }
+
 .content__list-item {
   padding-left: 1px;
 }
@@ -159,10 +156,10 @@ ol {
 .content__card-link:focus {
 outline:none;
 }
+
 .content__card-link:focus-visible .content__video-card {
   outline: 1px solid #fff;
-  }
-
+}
 
 .content__card-link:not(:active):hover {
   text-decoration: underline;
@@ -171,7 +168,7 @@ outline:none;
 }
 
 .content__card-link:active .content__video-card-description-container {
-background-color: #545050;
+  background-color: #545050;
 }
 
 .content__card-link_current .content__video-card-description-container {
@@ -188,32 +185,30 @@ background-color: #545050;
   font-size: 30px;
   text-transform: uppercase;
   line-height: 100%;
-  padding-top: 3px;
-  padding-left: 4px;
+  padding-top: 2px;
+  padding-left: 2px;
   overflow: hidden;
   white-space: nowrap;
   text-overflow:ellipsis;
-
 }
 
 .content__video-card-description {
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  -webkit-line-clamp: 1;
+  -webkit-line-clamp: 4;
   overflow: hidden;
   max-width: 196px;
   line-height: 16.2px;
   font-weight: normal;
   font-family: 'Fira Sans Condensed';
   font-size: 18px;
-  padding-left: 3px;
+  padding-left: 2px;
   padding-top: 4px;
 }
 
 .search-form {
   display: flex;
   width: 100%;
-  height: 54px;
   justify-content: flex-start;
   gap: 40px;
   justify-self: flex-start;
@@ -235,19 +230,18 @@ background-color: #545050;
 
 .search-form__fieldset:has(.search-form__textfield) {
   width: 225px;
-  height: 54px;
 }
 
 .search-form__fieldset:has(.search-form__checkbox) {
   width: 212px;
-  height: 49px;
 }
 
 .button {
   background-color: transparent;
   color:#fff;
   border: 1px solid #fff;
-  height: 34px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   font-family: inherit;
   font-size: inherit;
   font-weight: bold;
@@ -277,8 +271,8 @@ background-color: #545050;
 }
 
 .more-button {
+  margin:3px;
   margin-top: 30px;
-  margin-right: 3px;
   width: -webkit-fill-available;
 }
 
@@ -332,6 +326,7 @@ border-color: #fff;
   outline: 1px solid #fff;
   outline-offset: 1px;
 }
+
 .search-form__checkbox:checked + .search-form__pseudo-checkbox {
   background-color: #fff;
 }
