--- a/styles/style.css
+++ b/styles/style.css
@@ -181,7 +181,7 @@ outline:none;
 
 .content__video-card-title {
   max-width: 196px;
-  font-family: Oswald;
+  font-family: 'Oswald', sans-serif;
   font-size: 30px;
   text-transform: uppercase;
   line-height: 100%;
@@ -200,7 +200,7 @@ outline:none;
   max-width: 196px;
   line-height: 16.2px;
   font-weight: normal;
-  font-family: 'Fira Sans Condensed';
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   padding-left: 2px;
   padding-top: 4px;
